--- a/agent-service/Dockerfile
+++ b/agent-service/Dockerfile
@@ -2,10 +2,16 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
+# 安装 wget 用于健康检查
+RUN apt-get update && apt-get install -y wget && rm -rf /var/lib/apt/lists/*
+
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY app/ ./app/
+
+# 设置 PYTHONPATH 以确保可以正确导入模块
+ENV PYTHONPATH=/app
 
 EXPOSE 8000
 
