--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,6 +65,7 @@ services:
     ports:
       - "8080:8080"
     environment:
+      CONFIG_ENV: docker
       DB_HOST: postgres
       DB_PORT: 5432
       DB_USER: postgres
@@ -77,8 +78,6 @@ services:
       TASK_SERVICE_URL: http://task-service:8082
       AGENT_SERVICE_URL: http://agent-service:8000
       NOTIFICATION_SERVICE_URL: http://notification-service:8085
-    volumes:
-      - ./api-gateway/config.yaml:/app/config.yaml:ro
     depends_on:
       postgres:
         condition: service_healthy
@@ -103,6 +102,7 @@ services:
     ports:
       - "8081:8081"
     environment:
+      CONFIG_ENV: docker
       DB_HOST: postgres
       DB_PORT: 5432
       DB_USER: postgres
@@ -110,8 +110,6 @@ services:
       DB_NAME: mygoproject
       MQ_URL: amqp://guest:guest@rabbitmq:5672/
       SERVER_PORT: :8081
-    volumes:
-      - ./mail-ingestion-service/config.yaml:/app/config.yaml:ro
     depends_on:
       postgres:
         condition: service_healthy
@@ -134,6 +132,7 @@ services:
       dockerfile: email-processor-service/Dockerfile
     container_name: mygoproject-email-processor
     environment:
+      CONFIG_ENV: docker
       DB_HOST: postgres
       DB_PORT: 5432
       DB_USER: postgres
@@ -144,8 +143,6 @@ services:
       REDIS_PASSWORD: ""
       REDIS_DB: "0"
       AGENT_SERVICE_URL: http://agent-service:8000
-    volumes:
-      - ./email-processor-service/config.yaml:/app/config.yaml:ro
     depends_on:
       postgres:
         condition: service_healthy
@@ -168,14 +165,13 @@ services:
     ports:
       - "8082:8082"
     environment:
+      CONFIG_ENV: docker
       DB_HOST: postgres
       DB_PORT: 5432
       DB_USER: postgres
       DB_PASSWORD: 0923
       DB_NAME: mygoproject
       MQ_URL: amqp://guest:guest@rabbitmq:5672/
-    volumes:
-      - ./task-service/config.yaml:/app/config.yaml:ro
     depends_on:
       postgres:
         condition: service_healthy
@@ -200,6 +196,7 @@ services:
     ports:
       - "8084:8084"
     environment:
+      CONFIG_ENV: docker
       DB_HOST: postgres
       DB_PORT: 5432
       DB_USER: postgres
@@ -207,8 +204,6 @@ services:
       DB_NAME: mygoproject
       MQ_URL: amqp://guest:guest@rabbitmq:5672/
       AGENT_SERVICE_URL: http://agent-service:8000
-    volumes:
-      - ./task-runner-service/config.yaml:/root/config.yaml:ro
     depends_on:
       postgres:
         condition: service_healthy
@@ -233,14 +228,13 @@ services:
     ports:
       - "8085:8085"
     environment:
+      CONFIG_ENV: docker
       DB_HOST: postgres
       DB_PORT: 5432
       DB_USER: postgres
       DB_PASSWORD: 0923
       DB_NAME: mygoproject
       MQ_URL: amqp://guest:guest@rabbitmq:5672/
-    volumes:
-      - ./notification-service/config.yaml:/root/config.yaml:ro
     depends_on:
       postgres:
         condition: service_healthy
