--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -270,6 +270,37 @@ services:
       start_period: 10s
     restart: unless-stopped
 
+  # OpenTelemetry Collector
+  otel-collector:
+    image: otel/opentelemetry-collector:latest
+    container_name: mygoproject-otel-collector
+    command: ["--config=/etc/otel-collector-config.yaml"]
+    volumes:
+      - ./config/otel-collector-config.yaml:/etc/otel-collector-config.yaml
+    ports:
+      - "4317:4317"   # OTLP gRPC receiver
+      - "4318:4318"   # OTLP HTTP receiver
+      - "8888:8888"   # Prometheus metrics
+    depends_on:
+      - jaeger
+    networks:
+      - app-network
+    restart: unless-stopped
+
+  # Jaeger (Tracing Backend)
+  jaeger:
+    image: jaegertracing/all-in-one:latest
+    container_name: mygoproject-jaeger
+    ports:
+      - "16686:16686"  # Jaeger UI
+      - "14250:14250"  # Jaeger gRPC
+      - "14268:14268"  # Jaeger HTTP
+    environment:
+      - COLLECTOR_OTLP_ENABLED=true
+    networks:
+      - app-network
+    restart: unless-stopped
+
 volumes:
   postgres-data:
   redis-data:
